chg: findbugs hints